--- a/package.json
+++ b/package.json
@@ -10,26 +10,33 @@
   "version": "1.1.0",
   "scripts": {
     "test": "echo \"To do: no test specified\" && exit 1",
-    "scss": "node-sass -o css css && csso ./css/ebi-global.css --output ./css/ebi-global.min.css",
+    "scss": "node-sass -o css css && csso ./css/ebi-global.css --output ./css/ebi-global.min.css && npm run foundation-scss",
+    "foundation-scss": "node-sass ./css/foundation/_settings.scss ./libraries/foundation-6/css/foundation.css && csso ./libraries/foundation-6/css/foundation.css --output ./libraries/foundation-6/css/foundation.min.css",
+    "js": "npm run foundation-js",
+    "foundation-js": "cpx './libraries/foundation-6/dist/*.js' ./libraries/foundation-6/js",
     "//@14": [
       "-- Our buildscript: With this line we concat all libraries to be installed at once --"
     ],
-    "libraries": "npm run tablesorter && npm run foundation && npm run message_finished",
+    "libraries": "npm run tablesorter && npm run foundation-update && npm run message_finished",
     "//@18": [
       "-- All our libraries, not intended to be run indiviudually --"
     ],
     "tablesorter": "wget https://github.com/Mottie/tablesorter/archive/master.zip -d ./libraries/tablesorter.zip && extract-zip ./libraries/tablesorter.zip ./libraries/ && del ./libraries/tablesorter && mve ./libraries/tablesorter-master ./libraries/tablesorter && del ./libraries/tablesorter.zip",
-    "foundation": "wget http://foundation.zurb.com/sites/download/complete -d ./libraries/foundation-6.zip && del ./libraries/foundation-6 && extract-zip ./libraries/foundation-6.zip ./libraries/foundation-6/ && del ./libraries/foundation-6.zip && echo \"Copying foundation JS files one level up as they've moved...\" && ncp ./libraries/foundation-6/js/vendor/ ./libraries/foundation-6/js/ ",
+    "//@22": [
+      "-- Need to update this to pull from foundation repo at https://github.com/zurb/foundation-sites --"
+    ],
+    "foundation-update": "wget http://foundation.zurb.com/sites/download/complete -d ./libraries/foundation-6.zip && del ./libraries/foundation-6 && extract-zip ./libraries/foundation-6.zip ./libraries/foundation-6/ && del ./libraries/foundation-6.zip && echo \"Copying foundation JS files one level up as they've moved...\" && ncp ./libraries/foundation-6/js/vendor/ ./libraries/foundation-6/js/ ",
     "message_finished": "echo \"All done\""
   },
   "private": true,
   "devDependencies": {
+    "cpx": "^1.3.1",
     "csso": "^2.1.1",
     "del-cli": "^0.2.0",
     "extract-zip": "^1.5.0",
     "mve": "^0.1.2",
     "ncp": "^2.0.0",
-    "node-sass": "^3.7.0",
+    "node-sass": "^3.4.2",
     "node-wget": "^0.4.2"
   },
   "dependencies": {}
