--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     " -- If you want to build foundation from source you'll need to run 'foundation-update' and then the scripts 'scss' and 'js'.",
     "END NOTE"
   ],
-  "name": "ebi_framework",
-  "version": "1.1.0",
+  "name": "ebi-framework",
+  "version": "1.2.0-alpha.2",
   "scripts": {
     "test": "echo \"To do: no test specified\" && exit 1",
     "scss": "node-sass -o css css && csso ./css/ebi-global.css --output ./css/ebi-global.min.css && npm run foundation-scss-full-fat && npm run foundation-scss-lite && npm run foundation-scss-extras",
@@ -38,19 +38,13 @@
     "motion-ui-update": "wget https://github.com/zurb/motion-ui/archive/master.zip -d ./libraries/motion-ui.zip && del ./libraries/motion-ui && extract-zip ./libraries/motion-ui.zip ./libraries/motion-ui/ && del ./libraries/motion-ui.zip && echo \"Copying Motion UI files one level up as they've moved...\" && ncp ./libraries/motion-ui/motion-ui-master/ ./libraries/motion-ui/ && del ./libraries/motion-ui/motion-ui-master/ && echo \"Latest version of Motion UI downloaded, you'll need to run 'npm run scss' to build\"",
     "message_finished": "echo \"All done\""
   },
-  "name": "EBI-Framework",
   "description": "Homed here are the various assets that make the EBI Visual Framework (CSS, JS, and a few images and build scripts).",
-  "version": "v1.2.0-alpha.2",
   "license": "UNLICENSED",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ebiwd/EBI-Framework.git"
+    "url": "git+https://github.com/ebiwd/EBI-Framework.git"
   },
-  "author": {
-    "name": "EBI Web Development",
-    "email": "khawkins@ebi.ac.uk",
-    "url": "https://github.com/ebiwd"
-  },
+  "author": "EBI Web Development <khawkins@ebi.ac.uk> (https://github.com/ebiwd)",
   "devDependencies": {
     "concat-cli": "^4.0.0",
     "concatenate-files": "^0.1.1",
@@ -63,5 +57,10 @@
     "node-sass": "^3.4.2",
     "node-wget": "^0.4.2"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "bugs": {
+    "url": "https://github.com/ebiwd/EBI-Framework/issues"
+  },
+  "homepage": "https://github.com/ebiwd/EBI-Framework#readme",
+  "main": "index.js"
 }
