Remove motion ui build files from repo

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@ npm-debug.log
 libraries/foundation-6
 !libraries/foundation-6/js
 !libraries/foundation-6/css
+!libraries/foundation-6/LICENSE
+
+# Ignore all of foundation moutionui contrib but a few custom things
+libraries/motion-ui
+!libraries/motion-ui/dist
+!libraries/motion-ui/LICENSE
 
 # Ignore all of tablesorter contrib but a few custom things
 libraries/tablesorter
