Update build and test files to reflect removed build asssets

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "name": "ebi-framework",
   "version": "1.2.0-alpha.2",
   "scripts": {
-    "test": "npm run scss && npm run js",
     "scss": "node-sass -o css css && csso ./css/ebi-global.css --output ./css/ebi-global.min.css && npm run foundation-scss-full-fat && npm run foundation-scss-lite && npm run foundation-scss-extras",
+    "test": "npm run libraries && npm run scss && npm run js",
     "//@16": [
       "Foundation build variants",
       "We build three variants to allow a 'lite' edition.",
