--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "cpx": "^1.3.1",
     "csso": "^2.1.1",
     "del-cli": "^0.2.0",
-    "extract-zip": "^1.5.0",
+    "extract-zip": "1.6.0",
     "mve": "^0.1.2",
     "ncp": "^2.0.0",
     "node-sass": "^3.4.2",
