--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "name": "ebi-framework",
   "version": "1.3.0",
   "scripts": {
-    "test": "npm run libraries && npm run scss && npm run js",
+    "test": "npm run libraries && npm run scss && npm run js && npm run documentation",
     "scss": "npm run foundation-scss-full-fat && npm run foundation-scss-lite && npm run foundation-scss-extras && npm run choices-scss",
     "//@16": [
       "Foundation build variants",
@@ -25,7 +25,7 @@
     "foundation-scss-extras": "node-sass ./css/ebi-css-build/foundation/_settings-extras.scss ./css/ebi-extras.css && csso ./css/ebi-extras.css --output ./css/ebi-extras.min.css",
     "choices-scss": "node-sass ./libraries/Choices/assets/styles/scss/choices.scss ./libraries/Choices/assets/styles/css/choices.css && csso ./libraries/Choices/assets/styles/css/choices.css --output ./libraries/Choices/assets/styles/css/choices.min.css",
     "ebi-js": "concat-cli -f js/ebi-css-build/script/*.js -o js/script.js",
-    "js": "npm run foundation-js && npm run ebi-js",
+    "js": "npm run foundation-js && npm run ebi-js && npm run documentation",
     "foundation-js": "cpx './node_modules/foundation-sites/js/*.js' ./libraries/foundation-6/js",
     "//@30": [
       "-- Our buildscript: With this line we concat all libraries to be installed at once --"
@@ -37,6 +37,7 @@
     "tablesorter": "wget https://github.com/Mottie/tablesorter/archive/master.zip -d ./libraries/tablesorter.zip && extract-zip ./libraries/tablesorter.zip ./libraries/ && del ./libraries/tablesorter && mve ./libraries/tablesorter-master ./libraries/tablesorter && del ./libraries/tablesorter.zip",
     "foundation-update": "npm install foundation-sites && echo \"Latest version of foundation downloaded, you'll need to run 'npm run scss' and 'npm run js' to build\"",
     "motion-ui-update": "wget https://github.com/zurb/motion-ui/archive/v1.2.2.zip -d ./libraries/motion-ui.zip && del ./libraries/motion-ui && extract-zip ./libraries/motion-ui.zip ./libraries/motion-ui/ && del ./libraries/motion-ui.zip && echo \"Copying Motion UI files one level up as they've moved...\" && ncp ./libraries/motion-ui/motion-ui-1.2.2/ ./libraries/motion-ui/ && del ./libraries/motion-ui/motion-ui-master/ && echo \"Latest version of Motion UI downloaded, you'll need to run 'npm run scss' to build\"",
+    "documentation": "./node_modules/documentation/bin/documentation.js build ./js/** -f html -o docs -g && echo \"Updated JS docs.\"",
     "message_finished": "echo \"All done\""
   },
   "description": "Homed here are the various assets that make the EBI Visual Framework (CSS, JS, and a few images and build scripts).",
@@ -52,6 +53,7 @@
     "cpx": "^1.3.1",
     "csso": "^2.1.1",
     "del-cli": "^0.2.0",
+    "documentation": "^5.3.0",
     "extract-zip": "1.6.0",
     "foundation-sites": "^6.4.2",
     "mve": "^0.1.2",
