--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-name: EMBL-EBI Visual Framewrok
+name: EMBL-EBI Visual Framework
 group: EMBL-EBI Web Development
 email: www-dev@ebi.ac.uk
 domain: //ebiwd.github.io
