--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "foundation-scss-extras": "node-sass ./css/ebi-css-build/foundation/_settings-extras.scss ./css/ebi-extras.css && csso ./css/ebi-extras.css --output ./css/ebi-extras.min.css",
     "choices-scss": "node-sass ./libraries/Choices/assets/styles/scss/choices.scss ./libraries/Choices/assets/styles/css/choices.css && csso ./libraries/Choices/assets/styles/css/choices.css --output ./libraries/Choices/assets/styles/css/choices.min.css",
     "ebi-js": "concat-cli -f js/ebi-global-includes/script/*.js -o js/script.js",
-    "ebi-js-min": "uglifyjs js/script.js -o js/script.min.js --compress && uglifyjs js/foundationExtendEBI.js -o js/foundationExtendEBI.min.js --compress && uglifyjs js/elixirBanner.js -o js/elixirBanner.min.js --compress",
+    "ebi-js-min": "npx babel js/script.js --out-file js/script.js && uglifyjs js/script.js -o js/script.min.js --compress && uglifyjs js/foundationExtendEBI.js -o js/foundationExtendEBI.min.js --compress && uglifyjs js/elixirBanner.js -o js/elixirBanner.min.js --compress",
     "js": "npm run foundation-js && npm run ebi-js && npm run ebi-js-min && npm run documentation",
     "foundation-js": "cpx './node_modules/foundation-sites/js/*.js' ./libraries/foundation-6/js",
     "//@30": [
@@ -49,6 +49,7 @@
   },
   "author": "EBI Web Development <khawkins@ebi.ac.uk> (https://github.com/ebiwd)",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "concat-cli": "^4.0.0",
     "concatenate-files": "^0.1.1",
     "cpx": "^1.3.1",
