--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,8 @@
         "browsers": ["last 2 versions", "safari >= 7"]
       }
     }]
+  ],
+  "plugins": [
+    ["transform-remove-strict-mode"]
   ]
 }
