--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
       " -- Lite: the very basics for the EBI look and feel",
       " -- Extra: This + the lite version = full fat"
     ],
-    "foundation-scss-full-fat": "node-sass ./css/ebi-css-build/foundation/_settings-full-fat.scss ./css/ebi-global.css && csso ./css/ebi-global.css --output ./css/ebi-global.min.css",
+    "foundation-scss-full-fat": "node-sass ./css/ebi-css-build/foundation/_settings-full-fat.scss ./css/ebi-global.css && csso ./css/ebi-global.css --stat --no-restructure  --output ./css/ebi-global.min.css",
     "foundation-scss-lite": "node-sass ./css/ebi-css-build/foundation/_settings-lite.scss ./css/ebi-lite.css && csso ./css/ebi-lite.css --output ./css/ebi-lite.min.css",
     "foundation-scss-extras": "node-sass ./css/ebi-css-build/foundation/_settings-extras.scss ./css/ebi-extras.css && csso ./css/ebi-extras.css --output ./css/ebi-extras.min.css",
     "choices-scss": "node-sass ./libraries/Choices/assets/styles/scss/choices.scss ./libraries/Choices/assets/styles/css/choices.css && csso ./libraries/Choices/assets/styles/css/choices.css --output ./libraries/Choices/assets/styles/css/choices.min.css",
@@ -54,7 +54,8 @@
     "concat-cli": "^4.0.0",
     "concatenate-files": "^0.1.1",
     "cpx": "^1.3.1",
-    "csso": "^2.1.1",
+    "csso": "^3.5.1",
+    "csso-cli": "^2.0.2",
     "del-cli": "^0.2.0",
     "documentation": "^5.3.0",
     "extract-zip": "1.6.0",
