--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "documentation": "^5.3.0",
     "extract-zip": "1.6.0",
     "foundation-sites": "6.5.3",
-    "kss": "^3.0.0-beta.18",
+    "kss": "^3.0.1",
     "mve": "^0.1.2",
     "ncp": "^2.0.0",
     "node-sass": "^4.14.1",
