--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "foundation-scss-extras": "node-sass ./css/ebi-css-build/foundation/_settings-extras.scss ./css/ebi-extras.css && csso ./css/ebi-extras.css --output ./css/ebi-extras.min.css",
     "choices-scss": "node-sass ./libraries/Choices/assets/styles/scss/choices.scss ./libraries/Choices/assets/styles/css/choices.css && csso ./libraries/Choices/assets/styles/css/choices.css --output ./libraries/Choices/assets/styles/css/choices.min.css",
     "ebi-js": "concat-cli -f js/ebi-global-includes/script/*.js -o js/script.js",
-    "ebi-js-min": "npx babel js/script.js --out-file js/script.js && uglifyjs js/script.js -o js/script.min.js --compress && uglifyjs js/foundationExtendEBI.js -o js/foundationExtendEBI.min.js --compress && uglifyjs js/elixirBanner.js -o js/elixirBanner.min.js --compress",
+    "ebi-js-min": "babel js/script.js --out-file js/script.js && uglifyjs js/script.js -o js/script.min.js --compress && uglifyjs js/foundationExtendEBI.js -o js/foundationExtendEBI.min.js --compress && uglifyjs js/elixirBanner.js -o js/elixirBanner.min.js --compress",
     "js": "npm run foundation-js && npm run ebi-js && npm run ebi-js-min && npm run documentation",
     "foundation-js": "cpx './node_modules/foundation-sites/dist/js/*' ./libraries/foundation-6/js",
     "//@30": [
@@ -59,7 +59,7 @@
     "del-cli": "^0.2.0",
     "documentation": "^5.3.0",
     "extract-zip": "1.6.0",
-    "foundation-sites": "6.6.3",
+    "foundation-sites": "^6.6.3",
     "kss": "^3.0.1",
     "mve": "^0.1.2",
     "ncp": "^2.0.0",
