--- a/package.json
+++ b/package.json
@@ -52,25 +52,27 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "concat-cli": "^4.0.0",
-    "concatenate-files": "^0.1.1",
+    "concatenate-files": "^0.1.0",
     "cpx": "^1.3.1",
     "csso": "^3.5.1",
-    "csso-cli": "^2.0.2",
-    "del-cli": "^0.2.0",
-    "documentation": "^5.3.0",
-    "extract-zip": "1.6.0",
+    "csso-cli": "^4.0.1",
+    "del-cli": "^5.0.0",
+    "documentation": "^14.0.0",
+    "extract-zip": "^1.7.0",
     "foundation-sites": "^6.6.3",
     "kss": "^3.0.1",
     "mve": "^0.1.2",
     "ncp": "^2.0.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^7.0.3",
     "node-wget": "^0.4.2",
     "uglify-es": "^3.1.6"
   },
-  "dependencies": {},
   "bugs": {
     "url": "https://github.com/ebiwd/EBI-Framework/issues"
   },
   "homepage": "https://github.com/ebiwd/EBI-Framework#readme",
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "babel-preset-env": "^1.7.0"
+  }
 }
